# jht

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  DISCREPANCIES.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: full-suite.yml  nightly.yml  release.yml  test.yml
docs/: accuracy.md  consumers.md  design.md  findings_phase0.md  gpu.md  masked.md  motivation.md  offgrid.md  performance.md
scripts/: accuracy_sweep.py  bench_transforms.py  gpu_check.py  gpu_diagnostic.py  highL_ceiling.py  masked_sweep.py  mlx_spike.py  offgrid_sweep.py  profile_adjoint.py  profile_compile_time.py  profile_offgrid_forward.py  profile_ongrid_compile.py  submit_compile_probe_2048.sh  submit_confirm_2048.sh  submit_gpu_diagnostic.sh  submit_profile_adjoint.sh  submit_profile_compile.sh  submit_profile_offgrid.sh
scripts/exploratory/: _highL_grid.py  highL_mpmath_ref.py  highL_recursion_growth.py  phase0_floor.py  weight_conditioning.py
src/jht/: __init__.py  _analysis.py  _azimuth.py  _cache.py  _lambda_table.py  _nufft.py  _recursion.py  _reference.py  analysis.py  diff.py  healpix.py  masked.py  offgrid.py  weights.py
src/jht/mlx/: README.md  __init__.py  _apply.py
tests/: test_accuracy.py  test_api.py  test_azimuth_compile.py  test_azimuth_fft.py  test_diff_offgrid.py  test_floor.py  test_gpu.py  test_grad.py  test_healpix.py  test_highL.py  test_masked.py  test_offgrid.py  test_recursion.py  test_vectorized.py  test_weights.py  test_wiener.py
