[project]
name = "jht"
version = "0.1.0"
description = "JAX-native spherical harmonic transforms (BK-regime first): GPU-capable, differentiable, dependency-controlled."
authors = [{ name = "James Cheshire", email = "cheshire@caltech.edu" }]
maintainers = [{ name = "James Cheshire", email = "cheshire@caltech.edu" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

# RUNTIME dependencies are deliberately minimal — this is the dependency-control
# point of the project. jht itself needs only JAX + numpy. ducc0 / healpy are
# VALIDATION ORACLES (compared against in tests), never runtime dependencies.
dependencies = [
  "jax",
  "numpy",
]

[project.optional-dependencies]
validation = ["ducc0", "healpy"]   # oracles for parity tests only
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jht"]

# --- Pixi (standard env tool) -------------------------------------------------
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
jht = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.11"
jax = "*"            # conda-forge jaxlib is CPU here; the GPU/CUDA build lives in the `gpu` env (below, see docs/gpu.md).
numpy = "*"
# --- validation oracles (dev/test env only; NOT jht runtime deps) ---
ducc0 = "*"
healpy = "*"
# --- dev tooling ---
pytest = "*"
ruff = "*"
mypy = "*"

[tool.pixi.tasks]
test = "pytest"
lint = "ruff check"
format = "ruff format"
typecheck = "mypy src/jht"

# --- GPU environment (Phase 3; CUDA build of jaxlib for an NVIDIA box, e.g. Cannon) ---
# linux-64 only (no CUDA on osx-arm64). conda-forge ships the CUDA jaxlib for
# py312/py313 but NOT py314, so this env pins python 3.13 (the default CPU env
# stays py314 -- numerics are identical, it is pure JAX). Solve it from anywhere
# (`pixi install` re-solves all platforms); RUN it on the GPU box:
#   pixi run -e gpu python scripts/gpu_check.py
# See docs/gpu.md. x64 is caller-opt-in (set jax_enable_x64 before any array).
[tool.pixi.feature.gpu]
platforms = ["linux-64"]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12"

[tool.pixi.feature.gpu.dependencies]
python = "3.13.*"
jaxlib = { build = "cuda*" }
cuda-version = ">=12.9,<13"

[tool.pixi.environments]
gpu = { features = ["gpu"] }

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
