[project]
# Distribution (PyPI) name is `jaxht` -- the import name stays `jht` (PyPI blocks `jht`
# as too-short/too-similar). Like `pip install beautifulsoup4` -> `import bs4`.
name = "jaxht"
description = "JAX-native spherical harmonic transforms (BK-regime first): GPU-capable, differentiable, dependency-controlled."
authors = [{ name = "James Cheshire", email = "cheshire@caltech.edu" }]
maintainers = [{ name = "James Cheshire", email = "cheshire@caltech.edu" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "spherical-harmonic-transform",
  "healpix",
  "jax",
  "gpu",
  "automatic-differentiation",
  "nufft",
  "cosmic-microwave-background",
  "cosmology",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Typing :: Typed",
]
dynamic = ["version"]   # single-sourced from src/jht/__init__.py (see [tool.hatch.version])

# RUNTIME dependencies are deliberately minimal — this is the dependency-control
# point of the project. jht itself needs only JAX + numpy. ducc0 / healpy are
# VALIDATION ORACLES (compared against in tests), never runtime dependencies.
# Floors: jax>=0.4.30 matches bk-jax; numpy>=1.24 is a conservative modern base.
dependencies = [
  "jax>=0.4.30",
  "numpy>=1.24",
]

[project.optional-dependencies]
validation = ["ducc0", "healpy"]   # oracles for parity tests only
dev = ["pytest", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/jrcheshire/jht"
Repository = "https://github.com/jrcheshire/jht"
Issues = "https://github.com/jrcheshire/jht/issues"
Changelog = "https://github.com/jrcheshire/jht/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/jht/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/jht"]

# --- Pixi (standard env tool) -------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
jaxht = { path = ".", editable = true }   # the editable self-install (== [project].name)

[tool.pixi.dependencies]
python = ">=3.11"
jax = "*"            # conda-forge jaxlib is CPU here; the GPU/CUDA build lives in the `gpu` env (below, see docs/gpu.md).
numpy = "*"
# --- validation oracles (dev/test env only; NOT jht runtime deps) ---
ducc0 = "*"
healpy = "*"
# --- dev tooling ---
pytest = "*"
ruff = "*"
mypy = "*"
pytest-xdist = ">=3.8.0,<4"

[tool.pixi.tasks]
test = "pytest"                       # full suite (local default + nightly + pre-release)
test-fast = "pytest -m 'not slow'"    # the per-push CI gate (skips the heavy oracle sweeps)
lint = "ruff check"
format = "ruff format"
typecheck = "mypy src/jht"

# --- GPU environment (Phase 3; CUDA build of jaxlib for an NVIDIA box, e.g. Cannon) ---
# linux-64 only (no CUDA on osx-arm64). conda-forge ships the CUDA jaxlib for
# py312/py313 but NOT py314, so this env pins python 3.13 (the default CPU env
# stays py314 -- numerics are identical, it is pure JAX). Solve it from anywhere
# (`pixi install` re-solves all platforms); RUN it on the GPU box:
#   pixi run -e gpu python scripts/gpu_check.py
# See docs/gpu.md. x64 is caller-opt-in (set jax_enable_x64 before any array).
[tool.pixi.feature.gpu]
platforms = ["linux-64"]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12"

[tool.pixi.feature.gpu.dependencies]
python = "3.13.*"
jaxlib = { build = "cuda*" }
cuda-version = ">=12.9,<13"

[tool.pixi.environments]
gpu = { features = ["gpu"] }

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
# Heavy oracle/sweep tests are marked `slow` and excluded from the fast per-push CI
# gate (`pixi run test-fast`); the full suite (`pixi run test`) + the nightly workflow
# still run them, so no coverage is lost -- only rescheduled.
markers = [
  "slow: heavy oracle / sweep test; run by the full suite + nightly, not the fast gate",
]
